--- a/ckanext/sokigo/i18n/en/LC_MESSAGES/ckanext-sokigo.po
+++ b/ckanext/sokigo/i18n/en/LC_MESSAGES/ckanext-sokigo.po
@@ -1,17 +1,19 @@
-# Translations template for ckanext-sokigo.
+# English translations for ckanext-sokigo.
 # Copyright (C) 2020 ORGANIZATION
-# This file is distributed under the same license as the ckanext-sokigo project.
+# This file is distributed under the same license as the ckanext-sokigo
+# project.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2020.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: ckanext-sokigo 0.0.1\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2020-09-18 09:00+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2020-09-18 09:04+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
+"Language-Team: en <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -104,9 +106,9 @@ msgstr ""
 
 #: ckanext/sokigo/templates/package/resource_read.html:101
 msgid ""
-"If a view requires the DataStore, the DataStore plugin may not be enabled, or"
-" the data may not have been pushed to the DataStore, or the DataStore hasn't "
-"finished processing the data yet"
+"If a view requires the DataStore, the DataStore plugin may not be "
+"enabled, or the data may not have been pushed to the DataStore, or the "
+"DataStore hasn't finished processing the data yet"
 msgstr ""
 
 #: ckanext/sokigo/templates/package/snippets/additional_info.html:14
@@ -175,7 +177,7 @@ msgstr ""
 
 #: ckanext/sokigo/templates/package/snippets/package_basic_fields.html:24
 msgid "Tags"
-msgstr ""
+msgstr "Keywords"
 
 #: ckanext/sokigo/templates/package/snippets/package_basic_fields.html:24
 msgid "eg. economy, mental health, government"
@@ -394,4 +396,4 @@ msgstr ""
 
 #: ckanext/sokigo/templates/snippets/custom_form_fields.html:36
 msgid "Custom Value"
-msgstr ""
+msgstr "Value"
